# cda.REPOS

./: .gitignore  .gitmodules  Cognitive_Architecture_Language_Agent_Development.ipynb  Dockerfile  INTEGRATING.md  README  README.md  SETUP.md  cda_repos.py  entrypoint.sh  example.env  metagpt_quickstart.ipynb  pyproject.toml  repo_manager.py  setup.py
.github/workflows/: Cdaprod-Solutions_Runner_Matrix.yaml  api_build_container.yaml  api_runner.yaml  backend_build_container.yaml  deploy_runner_matrix.yaml  deploy_runners.yaml  deploy_services.yaml  event_drive_docker_ci_cd.yaml  frontend_build_container.yaml  frontend_runner.yaml  test_cda_repos_py.yaml  test_github_api.yaml
.myvenv/: pyvenv.cfg
agents/: assistant.py  main-2.py  main.py  planner.py  startup_developer.py  user_proxy.py
api/: Dockerfile  repos.py
apps/api-gateway/: __init__.py  api-gateway.py
apps/canopy/: minio_weaviate_knowledge_base.py
apps/cda.gateway/: .env  README.md  pyproject.toml
apps/cda.gateway/app/: server-CustomChains.py  server-LocalLLM.md  server.py
apps/cda.gateway/chains/: README.md  bucket_list_chain.py
apps/cda.gateway/docs/: Migrating_To_LCEL.md  Minio_Client.md
backend/: Dockerfile  repos.py
deploy/: deployment.yaml  service.yaml
docs/: cda.STORES.md  cdaREPOS.py  cluster.mermaid.md
frontend/: Dockerfile  repos.py
notebook/: LocalLLM-PALChain.ipynb  agentchat_RetreiveChat_MinIO_Weaviate_Integration.md  agentchat_RetrieveChat.ipynb  agentchat_planning.ipynb  metagpt_quickstart.ipynb  oai_completion.ipynb
runner/: Dockerfile.runner  README.md
(+7 files in other folders)
